# time_shard

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini
assets/arts/: ground_cave_1.aseprite  ground_cave_24px_1.aseprite  ground_cave_2x2_1.aseprite
docs/: game_design_document.md
src/: CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  config.h  control_manager.cpp  control_manager.h  glm_test.cpp  main.cpp  map.cpp  map.h  pch.h  tile.h  window.cpp  window.h
src/libraries/: CMakeLists.txt
src/libraries/game_object/: CMakeLists.txt  animator.cpp  animator.h  base_component.cpp  base_component.h  border.cpp  border.h  camera.cpp  camera.h  camera_tracker.cpp  camera_tracker.h  collider.cpp  collider.h  component.cpp  component.h  controller_component.h  game_object.cpp  game_object.h  game_object_tracker.h  map.h  movement.cpp  movement.h  player_controller.cpp  player_controller.h  player_state_machine.cpp  player_state_machine.h  sprite.cpp  sprite.h  sprite_circle.cpp  sprite_circle.h  sprite_color.cpp  sprite_color.h  sprite_group.cpp  sprite_group.h  sprite_texture.cpp  sprite_texture.h  state_machine.h  state_machine_component.h  state_machine_player.cpp  state_machine_player.h  (+4 more)
src/libraries/game_object_t/: CMakeLists.txt  base_game_object.h  camera.cpp  camera.h  game_object.h  player.cpp  player.h  test_object.h
src/libraries/game_object_t/component/: base_component.cpp  base_component.h  camera_tracker.cpp  camera_tracker.h  collider.cpp  collider.h  component.h  player_controller.h  sprite_component.cpp  sprite_component.h
src/libraries/managers/: CMakeLists.txt  audio_manager.cpp  audio_manager.h  collider_manager.cpp  collider_manager.h  event_manager.cpp  event_manager.h  game_manager.cpp  game_manager.h  input_manager.cpp  input_manager.h  material.h  render_manager.cpp  render_manager.h
src/libraries/renderer/: render_object.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h
src/libraries/scene/: CMakeLists.txt  map.cpp  map.h  map_loader.cpp  map_loader.h  scene.cpp  scene.h  start_scene.cpp  start_scene.h  test_scene.cpp  test_scene.h
src/libraries/state_machine/: CMakeLists.txt  loading_state.cpp  loading_state.h  resource.h  scene_state.cpp  scene_state.h  state.cpp  state.h  state_machine.cpp  state_machine.h  test_state.cpp  test_state.h
src/state_machine/: state.h
