add_library(
    game_object STATIC
    camera.cpp
    transform.cpp
    game_object.cpp
    base_component.cpp
    sprite_color.cpp
    sprite_texture.cpp
    sprite_circle.cpp
    player_controller.cpp
    camera_tracker.cpp
    collider.cpp
    movement.cpp
    animator.cpp
    state_machine_player.cpp
    ui_controller.cpp
)

